--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Magnus Wenzer", email = "nodc@smhi.se"},
 ]
 dependencies = [
-    "matplotlib>=3.8.4",
+    "matplotlib==3.8.*",
     "pyyaml>=6.0.1",
 ]
 requires-python = ">=3.11"
